Updated POM versions to use properties, which makes versioning easier